--- a/pom.xml
+++ b/pom.xml
@@ -154,5 +154,11 @@
 			<version>2.6</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>me.clip</groupId>
+			<artifactId>placeholderapi</artifactId>
+			<version>2.10.10</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 </project>
