Added vanish dependencies

--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,10 @@
 			<url>https://repo.viaversion.com</url>
 		</repository>
 		<repository>
+			<id>essentialsx-repo</id>
+			<url>https://repo.essentialsx.net/releases/</url>
+		</repository>
+		<repository>
 			<id>placeholderapi</id>
 			<url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
 		</repository>
@@ -177,6 +181,24 @@
 			<groupId>me.clip</groupId>
 			<artifactId>placeholderapi</artifactId>
 			<version>2.10.10</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>net.essentialsx</groupId>
+			<artifactId>EssentialsX</artifactId>
+			<version>2.19.0</version>
+			<scope>provided</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>org.bstats</groupId>
+					<artifactId>bstats-bukkit</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>com.github.mbax</groupId>
+			<artifactId>VanishNoPacket</artifactId>
+			<version>master-959b55931b-1</version>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
